[GTK] GLContextEGL.cpp: conflicting declaration 'typedef ptrdiff_t GLintptr' https://bugs.webkit.org/show_bug.cgi?id=133550

Reviewed by Gustavo Noronha Silva.

Cairo includes some definitions from GLX that conflict with the
ones provided by our GLES2 headers (GLintptr, GLsizeiptr).

Since GLContextEGL doesn't use any GLX functions we can safely
disable the inclusion of those functions in that source file.

* platform/graphics/egl/GLContextEGL.cpp:


Canonical link: https://commits.webkit.org/151813@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169935 268f45cc-cd09-0410-ab3c-d52691b4dbfc